[metadata]
name = tvdbapiv2
version = 1.0.1
author = p0psicles
author-email = p0psicles@gmail.com
summary = Swagger client for the thetvdb.com public api v2
home-page = https://github.com/pymedusa/tvdbv2
classifier =
    Environment :: Console
    Intended Audience :: Developres
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries

[flake8]
max-line-length = 120
import-order-style = cryptography
ignore =
    tvdbapiv2\__init__.py F401 I100 I202
