[metadata]
name = tvdbapiv2
version = 1.0.1
author = p0psicles
author-email = p0psicles@gmail.com
summary = Swagger client for the TheTVDB.com public API v2
home-page = https://github.com/pymedusa/tvdbv2
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries

[flake8]
max-line-length = 120
import-order-style = cryptography
ignore =
    tvdbapiv2\__init__.py F401 I100 I202
